# backend

./: .gitignore  API_FIXES_SUMMARY.md  FE_CLAUDE_CODE_SYSTEM_PROMPT.md  FE_CODE_EXAMPLES.md  FRONTEND_MILESTONE_HEALTH_INSTRUCTIONS.md  MILESTONE_ID_ADDITION.md  README.md  main.py  pyproject.toml  requirements.txt
.serena/: project.yml
api/: index.py
app/: config.py  db.py  document_parser.py  main.py  router.py  schema.py  service.py
app/ai/: __init__.py  azure_openai_service.py  dependencies.py  errors.py  gemini_service.py  groq_service.py  insight_service.py  prompts.py
