[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the delivery tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.12",
	"python-dotenv>=1.1.1",
	"pymongo>=4.13.2",
	"python-multipart>=0.0.20",
	"uvicorn>=0.34.3",
]

[project.scripts]
serve = "main:run"
